--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -10,7 +10,7 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/10/2/9/n2813969.md#1" target="_blank">巧遇仙翁 唐宰相为何痛失成仙机会</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/10/2/9/n2813969.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/02/PK2C000204N000000000PAA-e1575535131399-150x120.jpg" align ="left"></a>他责备齐映，说：“你为何轻易地将事情泄露出去？你做神仙的事本可能成的，现在不行了。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 9:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748468.md#1" target="_blank">天地清明引(156) 东流水－十年生死2</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748468.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/09/0213-3-150x120.jpg" align ="left"></a>昭雪手持鱼食，独坐水亭，呆呆望远，水中锦鲤嬉戏，绕着鱼饵打圈。忽地，眼前落下一物，落于水中，定睛一看，原来是朵牡丹花。回身之间，纳兰走近身来，昭雪登时皱眉：“花开得好，为何就摘了？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745640.md#1" target="_blank">苟瑞传奇：奇遇圣母 藩王问道 三拒嘉靖</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745640.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/getCollectionImage.aspx_-150x120.jpg" align ="left"></a>明朝嘉靖年间，少女苟正觉在山中遇到一位老母，吃下了一根奇草，开启了传奇的一生。明世宗嘉靖皇帝三次派人相请，最后一次，她预示了不久帝崩。明朝藩王与王妃以礼相待，为其建阁修祠。官员长途跋涉，向她请益。她未卜先知，每言奇中，在大明朝野留下闻世传奇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 5:10 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754199.md#1" target="_blank">天下第二行书《祭侄文稿》至情至性震动千古</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754199.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2002/08/Jizhiwengao_xqf-150x120.jpg" align ="left"></a>《祭侄文稿》是唐朝忠义圣哲颜真卿为年轻殉国的侄子写的祭文草稿，乍看之下通篇字迹凌乱、涂改，为何被元朝书法家鲜于枢评为“天下第二行书”，辈受到后世推崇？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 1:56 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754199.md#1" target="_blank">颜真卿《祭侄文稿》至情至性震动千古</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754199.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2002/08/Jizhiwengao_xqf-150x120.jpg" align ="left"></a>《祭侄文稿》是唐朝忠义圣哲颜真卿为年轻殉国的侄子写的祭文草稿，乍看之下通篇字迹凌乱、涂改，为何被元朝书法家鲜于枢评为“天下第二行书”，辈受到后世推崇？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 1:56 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761805.md#1" target="_blank">语言能力影响移民在校表现</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761805.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/000_Was1116329-150x120.jpg" align ="left"></a>语言能力通常被认为是移民成功融入新国家的关键。研究发现，更好的语言能力可以带来更好的在校表现。例如，对比第一代移民（自己移民或与父母一起移民的人）和第二代移民（在新国家出生的人），第二代移民的在校成绩通常更好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 11:23 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761781.md#1" target="_blank">中国留学生：澳大利亚让我吃惊的10件事</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761781.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/468A7049-150x120.jpg" align ="left"></a>一位来自中国大陆的留学生在澳大利亚求学了一年多后，分享了首次来澳洲时令他感到惊讶的十件事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 11:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761733.md#1" target="_blank">孩子焦虑的八大症状</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761733.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_98236344_Subscription_L-150x120.jpg" align ="left"></a>焦虑不仅仅是成人的专利，事实上，很多孩子在不同阶段和场合都可能遭受焦虑困扰，但表现形式却各不相同。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:56 AM			</td></tr>
